# file-watcher

./: Cargo.toml  README.md  config.yml  derivation.nix  flake.nix  test.scss
css/: test.css  test.css.map
src/: actions.rs  config.rs  ftp_client.rs  lib.rs  main.rs
tests/: test.rs
