[package]
name = "file-watcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
suppaftp = { version = "5.1.0", features = ["native-tls"] }
notify = "6.0.1"
regex = "1.9.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.25"
shlex = "1.2.0"
notify-debouncer-full = "0.3.1"
